<resources>
    <string name="app_name">Growponic</string>
    <string name="sign_in">Sign In</string>
    <string name="ic_growponic">Growponic Icon</string>
    <string name="beranda">Beranda</string>
    <string name="text_signIn">Memulai Aplikasi</string>
    <string name="ic_belajar">Belajar\nHidroponik</string>
    <string name="ic_materi">Cara\nMenanam</string>
    <string name="ic_jadwal">Jadwal\nPemberian\nNutrisi</string>
    <string name="ic_konsultasi">Ruang\nDiskusi</string>
    <string name="ic_account">Account</string>
    <string name="app_second_name">GROWPONIC</string>
    <string name="hint_name">My Name</string>
    <string name="save">Simpan</string>
    <string name="sign_out">Keluar</string>
    <string name="belajar">Belajar hidroponik</string>
    <string name="cara">Cara menanam \n Hidroponik</string>
    <string name="jadwal">Jadwal Perawatan</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="signin_google">Masuk dengan Google</string>
    <string name="pengertian">Pengertian Hidroponik</string>
    <string name="pengertian_detail">Tentang Hidroponik</string>
    <string name="manfaat">Manfaat Hidroponik</string>
    <string name="manfaat_detail">Apasih Manfaat Hidroponik?</string>
    <string name="Sejarah">Sejarah Hidroponik</string>
    <string name="Sejarah_detail">Sejarah Hidroponik?</string>
    <string name="teknik1">Teknik Wick System</string>
    <string name="teknik2">Teknik Deep Water Culture</string>
    <string name="lorem">\t\tLorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.\n\n
    \t\tLorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.\n\n
    \t\tLorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.\n\n
    \t\tLorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.\n\n
    \t\tLorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.\n\n
    \t\tLorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.\n\n</string>
    <string name="kompetensi_inti">KI 1:  Menghayati dan mengamalkan ajaran agama yang dianutnya\n\nKI 2: Menghayati dan mengamalkan perilaku jujur, disiplin, santun, peduli (gotong royong, kerjasama, toleran, damai), bertanggung jawab, responsif, dan pro-aktif dalam berinteraksi secara efektif sesuai dengan perkembangan anak di lingkungan, keluarga, sekolah, masyarakat dan lingkungan alam sekitar, bangsa, negara, kawasan regional, dan kawasan internasional\n\nKI 3: Memahami, menerapkan, dan menganalisis pengetahuan faktual, konseptual, prosedural, dan metakognitif berdasarkan rasa ingin tahunya tentang ilmu pengetahuan, teknologi, seni, budaya, dan humaniora dengan wawasan kemanusiaan, kebangsaan, kenegaraan, dan peradaban terkait penyebab fenomena dan kejadian, serta menerapkan pengetahuan prosedural pada bidang kajian yang spesifik sesuai dengan bakat dan minatnya untuk memecahkan masalah\n\nKI 4: Mengolah, menalar, dan menyaji dalam ranah konkret dan ranah abstrak terkait dengan pengembangan dari yang dipelajarinya di sekolah secara mandiri, bertindak secara efektif dan kreatif, serta mampu menggunakan metode sesuai kaidah keilmuan
</string>
    <string name="kompetensi_dasar">1.1 Mengagumi keteraturan dan kompleksitas ciptaan Tuhan tentang struktur dan fungsi DNA, gen dan kromosom dalam pembentukan dan pewarisan sifat serta pengaturan proses pada mahluk hidup\n\n2.1 Berperilaku ilmiah: teliti, tekun, jujur terhadap data dan fakta, disiplin, tanggung jawab, dan peduli dalam observasi dan eksperimen, berani dan santun dalam mengajukan pertanyaan dan berargumentasi, peduli lingkungan,  gotong royong, bekerjasama, cinta damai, berpendapat secara ilmiah dan kritis, responsif dan proaktif dalam dalam setiap tindakan dan dalam melakukan pengamatan dan percobaan di dalam kelas/laboratorium maupun di luar kelas/laboratorium\n\n3.1 Menganalisis hubungan antara faktor internal dan eksternal dengan proses pertumbuhan dan perkembangan pada mahluk hidup berdasarkan hasil percobaan\n\n4.1 Merencanakan dan melaksanakan percobaan tentang faktor luar yang memengaruhi proses pertumbuhan dan perkembangan  tanaman, dan melaporkan secara tertulis dengan menggunakan tatacara penulisan ilmiah yang benar</string>
    <string name="indikator">1.1.1 Mengagumi tumbuhan sebagai salah satu ciptaan Tuhan\n\n2.1.1 Menunjukkan sikap tekun, jujur, disiplin, kreatif, inovatif, dan bertanggung jawab\n\n2.1.2 Menunjukkan komitmen untuk menjaga  lingkungan sekitar\n\n3.1.1 Menjelaskan konsep dasar pertumbuhan dan perkembangan pada makhluk hidup\n\n3.1.2 Menguraikan proses pertumbuhan dan perkembangan  tumbuhan beserta faktor yang memengaruhinya\n\n3.1.3	Menentukan faktor eksternal yang memengaruhi pertumbuhan dan perkembangan tumbuhan berdasarkan hasil percobaan penanaman tanaman dengan teknik hidroponik\n\n4.1.1	Mengikuti prosedur percobaan penanaman tanaman dengan teknik hidroponik\n\n4.1.2 Melakukan kegiatan pengamatan tentang pengaruh faktor eksternal terhadap proses pertumbuhan dan perkembangan tanaman dengan teknik hidroponik\n\n4.1.3 Menyusun laporan hasil pengamatan pertumbuhan dan  perkembangan tanaman dengan teknik hidroponik</string>
    <string name="tujprak">1.1 Mengetahui pengaruh faktor eksternal terhadap proses pertumbuhan dan perkembangan tanaman dengan teknik hidroponik</string>
    <string name="pengertian_hidroponic">Hidroponik adalah teknik penanaman tanaman tanpa tanah, tanaman ditumbuhkan dalam media selain tanah seperti air, kerikil, arang sekam, bata merah, dan lain sebagainya (Tallei <i>et al</i>., 2017).
    </string>
    <string name="kelebihan_hidroponic">•	Hemat lahan\n•	Hemat air\n•	Bebas pestisida\n•	Tumbuh lebih cepat\n•	Tidak bergantung musim\n•	Nilai jual tinggi\n</string>
    <string name="teknik_penananman">
        Perbedaan antar teknik penanaman hidroponik terletak pada cara penghantaran air, nutrisi, dan oksigen pada akar tanaman. Berikut ini adalah teknik penanaman hidroponik: (Tallei <i>et al</i>., 2017)
    </string>
    <string name="drip_system">
        Pemompaan nutrisi dilakukan oleh pompa yang disiapkan dalam wadah, nutrisi akan dipompa sesuai jadwal yang sudah diatur.
    </string>
    <string name="nft_system">
        Pemenuhan nutrisi dalam sistem ini dilakukan melalui aliran air tipis dengan ketinggian lapisan air 1-2 cm.
    </string>
    <string name="ebb_system">
        Pemenuhan nutrisi tanaman dilakukan dengan cara menggenangi wilayah akar dengan nutrisi pada waktu yang sudah ditentukan.
    </string>
    <string name="deep_system">
        Pemenuhan nutrisi dilakukan dengan cara merendam akar dalam larutan nutrisi. Wadah tanaman dibuat dalam sebuah reservoir, tanaman diapungkan dengan bahan pengapung.
    </string>
    <string name="pemasaran_bag_1">Umumnya, sayuran yang dijual di supermarket dikemas menggunakan plastik.</string>
    <string name="pemasaran_bag_1_2">Penggunaan plastik ini tidak ramah lingkungan, plastik yang sudah tidak digunakan akan berakhir menjadi limbah yang sulit terdegradasi. </string>
    <string name="pemasaran_bag_2">Salah satu upaya penanggulangan pencemaran lingkungan hidup dan pemulihan lingkungan hidup adalah dengan penghentian sumber pencemaran dan pembersihan unsur pencemar (UU Nomor 32 Tahun 2009).\n\n
                                 </string>
    <string name="pemasaran_bag_3">Penggunaan kertas ramah lingkungan sebagai bahan kemasan sayur dapat menjadi salah satu upaya untuk meminimalisir volume sampah plastik.\n</string>
    <string name="pemasaran_strategi">Bercocok tanam hidroponik memberikan banyak keuntungan.  Nilai jual yang tinggi membuat sayuran hidroponik menjadi  ladang usaha yang menjanjikan.\n\nSimak beberapa strategi pemasaran sayuran hidroponik berikut ini.
    </string>
    <string name="referensi_pemasaran">Undang Undang Nomor 32 Tahun 2009 <i>Tentang Perlindungan dan Pengelolaan Lingkungan Hidup</i>\n</string>
    <string name="referensi_9">(Sumber: <i>blog.umy.ac.id</i>)</string>
    <string name="referensi_10">(Sumber: <i>kalilojipekalongan.blogspot.com</i>)</string>
    <string name="referensi_11">(Sumber: <i>www.totavo.com</i>)</string>
    <string name="referensi_12">(Sumber: <i>www.idntimes.com</i>)</string>
    <string name="video_tutorial">Video tutorial untuk prosedur kerja praktikum hidroponik disajikan dalam bentuk tautan youtube.\n\nBerikut ini adalah tautan untuk masing-masing prosedur kerja: </string>
    <string name="menyemai">1. Menyemai biji</string>
    <string name="link_1">"https://youtu.be/DFyxIdl3YG4"</string>
    <string name="wick_botol">2. Merancang instalasi wick system dengan botol bekas</string>
    <string name="link_2">"https://youtu.be/c81tAefgJV8"</string>
    <string name="wick_box">3. Merancang instalasi wick system dengan boks anggur bekas</string>
    <string name="link_3">"https://youtu.be/QgITM9kqsN0"</string>
    <string name="deep">4. Merancang instalasi deep water culture</string>
    <string name="link_4">"https://youtu.be/RcGM5Gu-WIE"</string>
    <string name="nutrisi">5. Membuat dan menggunakan nutrisi</string>
    <string name="link_5">"https://youtu.be/7iB6NpjbCo4"</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="title_tambah_tanaman">Tambah tanaman baru</string>
    <string name="jenis_tanaman">Nama tanaman</string>
    <string name="nama_tanaman">Keterangan</string>
</resources>