<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".tutorials.Tutorial6Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TutorialTheme"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="@android:color/white"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


    </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button"
            android:text="Video Tutorial"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/opensans_semibold"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/video_tutorial"
            android:padding="20dp"
            android:textSize="17sp"
            android:fontFamily="@font/opensans_semibold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menyemai"
            android:padding="20dp"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/link_1"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:autoLink="all"
            android:text="@string/link_1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wick_botol"
            android:padding="20dp"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/link_2"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:autoLink="all"
            android:text="@string/link_2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wick_box"
            android:padding="20dp"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/link_3"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:autoLink="all"
            android:text="@string/link_3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deep"
            android:padding="20dp"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/link_4"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:autoLink="all"
            android:text="@string/link_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutrisi"
            android:padding="20dp"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/link_5"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:autoLink="all"
            android:text="@string/link_5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />

        <Button
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:text="*Opsi subtitles/CC pada bagian pengaturan video diaktifkan untuk menampilkan langkah kerja tutorial"
            android:fontFamily="@font/opensans_semibold"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>




    </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>