<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:text="@string/judul"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:text="@string/deskripsi"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageSlide1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/teksPar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_reguler"
            android:text="@string/lorem"
            android:textSize="17sp"
            android:lineSpacingExtra="2sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageSlide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/teksPar2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_reguler"
            android:text="@string/lorem"
            android:textSize="17sp"
            android:lineSpacingExtra="2sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageSlide3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/teksPar3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/opensans_reguler"
            android:text="@string/lorem"
            android:textSize="17sp"
            android:textStyle="bold"
            android:lineSpacingExtra="2sp"/>


    </LinearLayout>

</ScrollView>