<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".belajarHidroponic.HidroponicPengertian">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/BelajarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/white"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@android:color/white"
                android:contentDescription="Pertumbuhan dan Perkembangan Tumbuhan"
                android:scaleType="centerCrop"
                android:src="@drawable/pemasaran2"/>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/BelajarTheme" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Satu sub bab 1-->

            <!--gambar 1-->
            <Button
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/lato_bold"
                android:text="Pemasaran Sayuran Hidroponik"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:text="a. Pengemasan Sayuran Ramah Lingkungan"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:fontFamily="@font/opensans_reguler"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:padding="16dp"
                android:text="@string/pemasaran_bag_1"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/imageViewPem_1"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="dripsystem"
                android:src="@drawable/loading" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/referensi_9"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>
            <!--gambar 2-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:fontFamily="@font/opensans_reguler"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:padding="16dp"
                android:text="@string/pemasaran_bag_1_2"
                android:textSize="16sp" />
            <!--gambar 3-->
            <ImageView
                android:id="@+id/imageViewPem_3"
                android:layout_width="wrap_content"
                android:layout_height="237dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="dripsystem"
                android:src="@drawable/loading" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/referensi_10"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:fontFamily="@font/opensans_reguler"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:padding="16dp"
                android:text="@string/pemasaran_bag_2"
                android:textSize="16sp" />

            <!--gambar 4-->
            <ImageView
                android:id="@+id/imageViewPem_4"
                android:layout_width="wrap_content"
                android:layout_height="237dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="dripsystem"
                android:src="@drawable/loading" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/referensi_11"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>
            <!--gambar 5-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:fontFamily="@font/opensans_reguler"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:padding="16dp"
                android:text="@string/pemasaran_bag_3"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/imageViewPem_7"
                android:layout_width="wrap_content"
                android:layout_height="237dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="dripsystem"
                android:src="@drawable/loading" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/referensi_12"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:padding="16dp"
                android:text="b. Strategi Pemasaran Sayuran Hidroponik"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:fontFamily="@font/opensans_reguler"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:padding="16dp"
                android:text="@string/pemasaran_strategi"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/imageViewPem_8"
                android:layout_width="wrap_content"
                android:layout_height="237dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="60dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="dripsystem"
                android:src="@drawable/loading" />
<!--Sub judul mulai -->
            <Button
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:text="Referensi"
                android:fontFamily="@font/lato_bold"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="20sp"
                android:fontFamily="@font/opensans_reguler"
                android:textStyle="bold"
                android:lineSpacingExtra="4sp"
                android:padding="16dp"
                android:text="@string/referensi_pemasaran"
                android:textSize="12sp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>