<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".TambahTanaman">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_white"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="false"
        android:elevation="6dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/title_tambah_tanaman"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginTop="50dp"
        android:text="@string/jenis_tanaman"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/spinner_jenis_tanaman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="22dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginTop="30dp"
        android:text="@string/nama_tanaman"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editText_nama_tanaman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/opensans_semibold"
        android:hint="misalnya, tugas praktikum"
        android:textSize="16sp"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_simpan_tanaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/opensans_semibold"
        android:text="Simpan"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</LinearLayout>